# libBRiAl

./: .gitignore  Makefile.am  README.md  common.mk  configure.ac
cudd/: Makefile.am  cudd.h  cuddAPI.c  cuddCache.c  cuddInit.c  cuddInt.h  cuddLCache.c  cuddRef.c  cuddTable.c  cuddZddFuncs.c  cuddZddSetop.c  util.h
groebner/include/: Makefile.am
groebner/include/brial/groebner/: FGLMStrategy.h  GroebnerStrategy.h  PairManager.h  ReductionTerms.h  RelatedTerms.h  RelatedTermsBase.h  cache_manager.h  groebner_alg.h  groebner_defs.h  tables.h
groebner/src/: FGLMStrategy.cc  GroebnerStrategy.cc  LexBucket.cc  LiteralFactorization.cc  LiteralFactorizationIterator.cc  MatrixMonomialOrderTables.cc  PairManager.cc  PolyEntry.cc  ReductionStrategy.cc  dlex4data.cc  dp_asc4data.cc  groebner.cc  groebner_alg.cc  interpolate.cc  lp4data.cc  nf.cc  pairs.cc  polynomial_properties.cc  randomset.cc
libbrial/include/: Makefile.am  brial.h
libbrial/include/brial/: BlockDegLexOrder.h  BlockDegRevLexAscOrder.h  BooleConstant.h  BooleEnv.h  BooleExponent.h  BooleMonomial.h  BoolePolyRing.h  BoolePolynomial.h  BooleSet.h  BooleSetSequence.h  BooleVariable.h  DegLexOrder.h  DegRevLexAscOrder.h  LexOrder.h  brial.h  brial_defs.h  embed.h
libbrial/include/brial/cache/: CCacheManagement.h  CDegreeCache.h  CacheManager.h
libbrial/include/brial/common/: CCheckedIdx.h  CExtrusivePtr.h  CWeakPtr.h  CWeakPtrFacade.h  TransformedSequence.h  tags.h  traits.h
libbrial/include/brial/diagram/: CApplyNodeFacade.h  CCuddDDFacade.h  CDDOperations.h  CNodeCounter.h
libbrial/include/brial/except/: CErrorInfo.h  brialError.h  brialGenericError.h
libbrial/include/brial/factories/: CFactoryBase.h  MonomialFactory.h  PolynomialFactory.h  SetFactory.h  VariableBlock.h  VariableFactory.h
libbrial/include/brial/iterators/: CBidirectTermIter.h  CCuddNavigator.h  CExpIter.h  CGenericIter.h  COrderedIter.h  CStackSelector.h  CTermGenerator.h  CTermIter.h  CTermStack.h  CVariableIter.h  TransformedIterator.h  brialOutIter.h
libbrial/include/brial/literals/: CLiteralCodes.h  CStringLiteral.h
libbrial/include/brial/orderings/: COrderingBase.h  COrderingFacade.h  COrderingTags.h  brial_order.h  order_tags.h  order_traits.h
libbrial/include/brial/ring/: CCallbackWrapper.h  CCuddCore.h  CCuddInterface.h  CMemberFunctionTraits.h  CVariableNames.h  WeakRingPtr.h
libbrial/include/brial/routines/: brial_algo.h  brial_algo_int.h  brial_algorithms.h  brial_func.h  brial_routines.h  brial_routines_cuddext.h  brial_routines_dd.h  brial_routines_hash.h  brial_routines_misc.h  brial_routines_order.h
libbrial/src/: BlockDegLexOrder.cc  BlockDegRevLexAscOrder.cc  BooleEnv.cc  BooleExponent.cc  BooleMonomial.cc  BoolePolyRing.cc  BoolePolynomial.cc  BooleSet.cc  BooleVariable.cc  CCheckedIdx.cc  CCuddFirstIter.cc  CCuddLastIter.cc  CErrorInfo.cc  DegLexOrder.cc  DegRevLexAscOrder.cc  LexOrder.cc  Makefile.am  brialError.cc  brial_routines.cc
tests/: Makefile.am
