nobase_include_HEADERS = \
	brial/groebner/add_up.h \
	brial/groebner/BitMask.h \
	brial/groebner/BlockOrderHelper.h \
	brial/groebner/BoundedDivisorsOf.h \
	brial/groebner/cache_manager.h \
	brial/groebner/ChainCriterion.h \
	brial/groebner/ChainVariableCriterion.h \
	brial/groebner/CheckChainCriterion.h \
	brial/groebner/contained_variables.h \
	brial/groebner/CountCriterion.h \
	brial/groebner/DegOrderHelper.h \
	brial/groebner/dlex4data.h \
	brial/groebner/dp_asc4data.h \
	brial/groebner/draw_matrix.h \
	brial/groebner/ExpGreater.h \
	brial/groebner/ExpLexLess.h \
	brial/groebner/FGLMStrategy.h \
	brial/groebner/fixed_path_divisors.h \
	brial/groebner/GetNthPoly.h \
	brial/groebner/groebner.h \
	brial/groebner/groebner_alg.h \
	brial/groebner/groebner_defs.h \
	brial/groebner/GroebnerOptions.h \
	brial/groebner/GroebnerStrategy.h \
	brial/groebner/HasTRepOrExtendedProductCriterion.h \
	brial/groebner/IJPairData.h \
	brial/groebner/interpolate.h \
	brial/groebner/IsEcart0Predicate.h \
	brial/groebner/IsVariableOfIndex.h \
	brial/groebner/LargerDegreeComparer.h \
	brial/groebner/LeadingTerms.h \
	brial/groebner/LeadingTerms00.h \
	brial/groebner/LeadingTerms11.h \
	brial/groebner/LessCombinedManySizesInStrat.h \
	brial/groebner/LessEcartThenLessWeightedLengthInStrat.h \
	brial/groebner/LessUsedTailVariablesThenLessWeightedLengthInStrat.h \
	brial/groebner/LessWeightedLengthInStrat.h \
	brial/groebner/LessWeightedLengthInStratModified.h \
	brial/groebner/LexBucket.h \
	brial/groebner/LexHelper.h \
	brial/groebner/LexOrderGreaterComparer.h \
	brial/groebner/linear_algebra_step.h \
	brial/groebner/LiteralFactorization.h \
	brial/groebner/LiteralFactorizationIterator.h \
	brial/groebner/ll_red_nf.h \
	brial/groebner/LLReduction.h \
	brial/groebner/LLReductor.h \
	brial/groebner/LMLessCompare.h \
	brial/groebner/LMLessComparePS.h \
	brial/groebner/Long64From32BitsPair.h \
	brial/groebner/lp4data.h \
	brial/groebner/MatrixMonomialOrderTables.h \
	brial/groebner/minimal_elements.h \
	brial/groebner/MinimalLeadingTerms.h \
	brial/groebner/MonomialHasher.h \
	brial/groebner/MonomialPlusOneTerms.h \
	brial/groebner/MonomialTerms.h \
	brial/groebner/NBitsUsed.h \
	brial/groebner/NextSpoly.h \
	brial/groebner/nf.h \
	brial/groebner/PairData.h \
	brial/groebner/PairE.h \
	brial/groebner/PairECompare.h \
	brial/groebner/PairLS.h \
	brial/groebner/PairLSCompare.h \
	brial/groebner/PairManager.h \
	brial/groebner/PairManagerFacade.h \
	brial/groebner/pairs.h \
	brial/groebner/PairStatusSet.h \
	brial/groebner/PolyEntry.h \
	brial/groebner/PolyEntryBase.h \
	brial/groebner/PolyEntryIndices.h \
	brial/groebner/PolyEntryPtrLmLess.h \
	brial/groebner/PolyEntryReference.h \
	brial/groebner/PolyEntryVector.h \
	brial/groebner/PolyFromPolyEntry.h \
	brial/groebner/PolyMonomialPairComparerLess.h \
	brial/groebner/PolyMonomialPairComparerLexLess.h \
	brial/groebner/polynomial_properties.h \
	brial/groebner/PolynomialSugar.h \
	brial/groebner/PolyPairData.h \
	brial/groebner/PSCompareByEl.h \
	brial/groebner/PseudoLongLong.h \
	brial/groebner/PseudoLongProduct.h \
	brial/groebner/randomset.h \
	brial/groebner/RankingVector.h \
	brial/groebner/red_tail.h \
	brial/groebner/RedTailNth.h \
	brial/groebner/ReductionOptions.h \
	brial/groebner/ReductionStrategy.h \
	brial/groebner/ReductionTerms.h \
	brial/groebner/RelatedTerms.h \
	brial/groebner/RelatedTermsBase.h \
	brial/groebner/SetAssociatedMinimal.h \
	brial/groebner/SetBitUInt.h \
	brial/groebner/ShorterEliminationLength.h \
	brial/groebner/ShorterEliminationLengthModified.h \
	brial/groebner/SlimgbReduction.h \
	brial/groebner/tables.h \
	brial/groebner/TermsFacade.h \
	brial/groebner/TimesConstantImplication.h \
	brial/groebner/TimesVariableSubstitution.h \
	brial/groebner/VariablePairData.h \
	brial/groebner/ZeroFunction.h
