nobase_include_HEADERS = \
	brial/BlockDegLexOrder.h \
	brial/BlockDegRevLexAscOrder.h \
	brial/BooleConstant.h \
	brial/BooleEnv.h \
	brial/BooleExponent.h \
	brial/BooleMonomial.h \
	brial/BoolePolynomial.h \
	brial/BoolePolyRing.h \
	brial/BooleSet.h \
	brial/BooleSetSequence.h \
	brial/BooleVariable.h \
	brial/cache/CacheManager.h \
	brial/cache/CCacheManagement.h \
	brial/cache/CDegreeCache.h \
	brial/common/CCheckedIdx.h \
	brial/common/CExtrusivePtr.h \
	brial/common/CWeakPtr.h \
	brial/common/CWeakPtrFacade.h \
	brial/common/tags.h \
	brial/common/traits.h \
	brial/common/TransformedSequence.h \
	brial/config.h \
	brial/cudd/prefix.h \
	brial/cudd/prefix_internal.h \
	brial/DegLexOrder.h \
	brial/DegRevLexAscOrder.h \
	brial/diagram/CApplyNodeFacade.h \
	brial/diagram/CCuddDDFacade.h \
	brial/diagram/CDDOperations.h \
	brial/diagram/CNodeCounter.h \
	brial/except/CErrorInfo.h \
	brial/except/brialError.h \
	brial/except/brialGenericError.h \
	brial/factories/CFactoryBase.h \
	brial/factories/MonomialFactory.h \
	brial/factories/PolynomialFactory.h \
	brial/factories/SetFactory.h \
	brial/factories/VariableBlock.h \
	brial/factories/VariableFactory.h \
	brial/iterators/CBidirectTermIter.h \
	brial/iterators/CCuddFirstIter.h \
	brial/iterators/CCuddLastIter.h \
	brial/iterators/CCuddNavigator.h \
	brial/iterators/CExpIter.h \
	brial/iterators/CGenericIter.h \
	brial/iterators/COrderedIter.h \
	brial/iterators/CStackSelector.h \
	brial/iterators/CTermGenerator.h \
	brial/iterators/CTermIter.h \
	brial/iterators/CTermStack.h \
	brial/iterators/CVariableIter.h \
	brial/iterators/brialOutIter.h \
	brial/iterators/TransformedIterator.h \
	brial/LexOrder.h \
	brial/literals/CLiteralCodes.h \
	brial/literals/CStringLiteral.h \
	brial/orderings/CBlockOrderingFacade.h \
	brial/orderings/COrderingBase.h \
	brial/orderings/COrderingFacade.h \
	brial/orderings/COrderingTags.h \
	brial/orderings/order_tags.h \
	brial/orderings/order_traits.h \
	brial/orderings/brial_order.h \
	brial/brial_defs.h \
	brial/brial.h \
	brial/ring/CCallbackWrapper.h \
	brial/ring/CCuddCore.h \
	brial/ring/CCuddInterface.h \
	brial/ring/CMemberFunctionTraits.h \
	brial/ring/CVariableNames.h \
	brial/ring/WeakRingPtr.h \
	brial/routines/brial_algo.h \
	brial/routines/brial_algo_int.h \
	brial/routines/brial_algorithms.h \
	brial/routines/brial_func.h \
	brial/routines/brial_routines.h \
	brial/routines/brial_routines_cuddext.h \
	brial/routines/brial_routines_dd.h \
	brial/routines/brial_routines_hash.h \
	brial/routines/brial_routines_misc.h \
	brial/routines/brial_routines_order.h \
	brial.h

noinst_HEADERS = \
	brial/cudd/cudd.h \
	brial/cudd/cuddInt.h
